# bimodal

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  data.dvc  dvc.yaml  pyproject.toml
data/: .gitignore  clean_counter.dvc  weather.md  wellington_holidays.parquet
data/raw/: weather.dvc
data/raw/counter/: .gitignore  2018_ecocounter_data_20230905140019.csv.dvc  2019_ecocounter_data_20230905140408.csv.dvc  2020_ecocounter_data_20230905140803.csv.dvc  2021_ecocounter_data_20230905141200.csv.dvc  2022_ecocounter_data_20230905141557.csv.dvc  2023_ecocounter_data_20230905141951.csv.dvc
data/raw_counter/: .gitignore  2018_ecocounter_data_20230905140019.csv.dvc  2019_ecocounter_data_20230905140408.csv.dvc  2020_ecocounter_data_20230905140803.csv.dvc  2021_ecocounter_data_20230905141200.csv.dvc  2022_ecocounter_data_20230905141557.csv.dvc  2023_ecocounter_data_20230905141951.csv.dvc
notebooks/: bambi.ipynb  daily-count.ipynb  dirichlet_hour_fixed_day.ipynb  fixed-daytype-varied-time.ipynb  fixed-time-varied-day.ipynb  gp_day_hour.ipynb  gp_month_day_hour.ipynb  ground_up.ipynb  hourly_models.ipynb  modelling_1.ipynb  modelling_2.ipynb  monthly-count.ipynb  raw-data-exploration.ipynb
python/src/bimodal/: cli.py  config.py  database.py  datasets.py  preprocessing.py  sql.py
python/src/welly_bike_data/: cli.py
