[tool.poetry]
name = "bimodal"
version = "0.1.0"
description = "Analysis and visualisation of bike counter data in Wellington"
authors = ["Henry Zwart <henrybzwart@gmail.co.nz>"]
readme = "README.md"
packages = [{include = "bimodal", from = "python/src"}]

[tool.poetry.scripts]
bimodal = "bimodal.cli:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = ">=0.6.0"
loguru = "^0.7.0"
pydantic = "^2.3"
pydantic-settings = "^2.0"
alive-progress = "^3.0.0"
rich = "^13.5"
polars = "^0.19"
numpy = "^1.25"
pymc = "^5"
seaborn = "^0.12"
pyarrow = "^8.0"

[tool.poetry.group.dev.dependencies]
mock = "^4.0.3"
pytest = "^7.1"
hypothesis = "^6.8.0"
mypy = ">=0.971"
black = "^22.3.0"
types-mock = "^4.0.15"
pre-commit = "^2.20.0"
ruff = "^0.0.257"

[tool.poetry.group.dvc]
optional = true

[tool.poetry.group.dvc.dependencies]
dvc = {extras = ["s3"], version = "^2.55.0"}

[tool.poetry.group.notebook]
optional = true

[tool.poetry.group.notebook.dependencies]
jupyterlab-code-formatter = "^1.5.3"
jupyterlab = "^3.5.0"
matplotlib = "^3.6.2"
isort = "^5.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = [
    "pyproject.toml:version",
    "src/bimodal/__init__.py:__version__",
]

[tool.ruff]
# https://beta.ruff.rs/docs/rules/
line-length = 88
select = [
    'F',    # pyflakes
    'E',    # codestyle
    'W',    # warning
    'C90',  # complexity
    'N',    # pep-naming
    'UP',   # upgrade
    'S',    # bandit
    'B',    # bug-bear
    'A',    # builtins
    'C4',   # comprehensions
    'PIE',  # misc
    'ISC',  # literal concat
    'T20',  # print statements
    'PT',   # pytest
    'RET',  # returns
    'SIM',  # simplify
    'PTH',  # use pathlib
    'Q',    # quotes
    'PLR',  # refactor
    'PLE',  # pylint errors
    'I001', # isort
]
ignore = [
    "B019",     # let's not worry about this.
    "B008",     # FastAPI does this standardly.
    "SIM108",   # Ternary not that clear (opinion!)
    "RET504",   # This seems broken to me.
    "S324",     # We're not using hashes for security.
]
unfixable = [
   "T20",  # Removes print statements
   "F841", # Removes unused variables
 ]

src = ['src', 'tests']

[tool.ruff.per-file-ignores]
# Ignore ALL init import errors.
"__init__.py" = ['F401']

# asserts and hard-coded values are fine in tests.
"tests/*.py" = ["S101", "PLR2004"]

# these are not really passwords
"tests/conftest.py" = ["S105"]

"cli.py" = ["S105"]

# typer does some stuff that normally would be evil.
# "#src/bimodal/cli.py" = ['B008', 'FBT001', 'FBT003']

[tool.mypy]
python_version = "3.10"
show_error_codes = true
warn_unused_configs = true
disable_error_code = [
    "misc",  # This appears to give annoying errors about Generics.
    "annotation-unchecked",  # Useless warnings
]
ignore_missing_imports = true